--- a/index.html
+++ b/index.html
@@ -12,7 +12,17 @@
     />
   </head>
   <body>
-    <h1>Hello There</h1>
+    <div class="container">
+      <div class="row justify-content-center align-items-center pt-5">
+        <div class="col-auto"><h1 ></h1></div>
+        <div class="col-auto"><h1 ></h1></div>
+        <div class="col-auto"><h1 ></h1></div>
+        <div class="col-auto"><h1 ></h1></div>
+        <div class="col-auto"><h1 ></h1></div>
+        <div class="col-12 text-center"><button id="btnGenera" class="btn btn-primary">Genera</button></div>
+      </div>
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
