feat;check numbers done

--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
   </head>
   <body>
     <div class="container">
-      <form action="">
-        <div
-          class="row justify-content-center align-items-center pt-5 text-center"
-        >
-          <div class="col-auto"><h1></h1></div>
-          <div class="col-auto"><h1></h1></div>
-          <div class="col-auto"><h1></h1></div>
-          <div class="col-auto"><h1></h1></div>
-          <div class="col-auto"><h1></h1></div>
-          <div class="col-12 text-center pt-2">
-            <button id="btnGenera" class="btn btn-primary">Genera</button>
-            <button type="submit" id="btnConvalida" class="btn btn-secondary d-none">
-              Convalida
-            </button>
-          </div>
+      <div
+        class="row justify-content-center align-items-center pt-5 text-center"
+      >
+        <div class="col-auto"><h1></h1></div>
+        <div class="col-auto"><h1></h1></div>
+        <div class="col-auto"><h1></h1></div>
+        <div class="col-auto"><h1></h1></div>
+        <div class="col-auto"><h1></h1></div>
+        <div class="col-12 text-center pt-2">
+          <button type="click" id="btnGenera" class="btn btn-primary">
+            Genera
+          </button>
+          <button id="btnConvalida" class="btn btn-secondary d-none">
+            Convalida
+          </button>
         </div>
-      </form>
+      </div>
     </div>
 
     <script
