--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     />
   </head>
   <body>
-    <div class="container">
+    <div class="container text-center pt-5">
+      <h1>Ricordati i numeri in ordine</h1>
       <div
         class="row justify-content-center align-items-center pt-5 text-center"
       >
@@ -28,6 +29,7 @@
           <button id="btnConvalida" class="btn btn-secondary d-none">
             Convalida
           </button>
+          <h3 id="testoRisultato" class="d-none">ne</h3>
         </div>
       </div>
     </div>
